Removed styling to remove issue where the page overflows a bit because the sizing isn't responsive

--- a/src/assets/styles/scss/elements.scss
+++ b/src/assets/styles/scss/elements.scss
@@ -13,10 +13,6 @@ ng-view {
     flex: 1 0 auto;
 }
 
-ng-view {
-    height: 94vh !important;
-}
-
 header {
     background-color: $light-grey;
     flex: none; // Prevent some browsers from letting these items shrink to smaller than their content's default minimum size
